# assistente-social-midia

./: .env.example  .gitignore  CLAUDE.md  INSTALACAO.md  README.md  setup.sh  start.sh  stop.sh
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  brand_agent.py  content_agent.py  orchestrator.py  protocols.py  visual_agent.py
backend/app/api/: assets.py  brand_blocks.py  brand_memory.py  changes.py  deps.py  generations.py  lia.py  sources.py  templates.py
backend/app/core/: auth.py  config.py  db.py  dsn.py  logging.py
backend/app/integrations/: anthropic_client.py  gemini_client.py  image_provider.py  llm_provider.py  supabase_client.py
backend/app/models/: agent_log.py  asset.py  brand_block.py  brand_memory.py  generation.py  lia.py  pending_change.py  source.py  template.py
backend/app/services/: asset_cache.py  brand_block_service.py  brand_memory_service.py  (+7 more)
backend/migrations/: 000_schema_migrations.sql  000a_app_role.sql  002_mkt_brand_memory.sql  003_mkt_templates.sql  004_mkt_generations.sql  005_mkt_assets.sql  006_mkt_agent_logs.sql  007_storage_buckets.sql  008_rls_policies.sql  009_seed_templates.sql  010_mkt_brand_blocks.sql  011_mkt_brand_block_versions.sql  012_mkt_pending_changes.sql  013_mkt_change_cascades.sql  014_mkt_sources.sql  015_mkt_lia_conversations.sql  016_mkt_lia_messages.sql  017_rls_new_tables.sql  018_migrate_brand_memory_to_blocks.sql
backend/scripts/: run_migrations.py
backend/tests/: conftest.py  test_brand_blocks_flow.py  test_rls_isolation.py  test_rls_new_tables.py
(+144 files in other folders)
